@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.3468 2003/09/20 17:05:54 fredb Exp $
+$NetBSD: CHANGES,v 1.3469 2003/09/21 16:24:26 kim Exp $
 
 Changes to the packages collection and infrastructure in 2003:
 
@@ -3862,3 +3862,6 @@ Changes to the packages collection and infrastructure in 2003:
 	Updated p5-MailTools to 1.59 [chris 2003-09-20]
 	Updated pure-ftpd to 1.0.16a [salo 2003-09-20]
 	Updated mgetty to 1.1.30 [fredb 2003-09-20]
+	Added p5-Module-Build-0.20 [kim 2003-09-21]
+	Added p5-Image-Imlib2-0.12 [kim 2003-09-21]
+	Updated p5-Apache-Gallery to 0.7 [kim 2003-09-21]
